<resources>
    <string name="app_name">EPICS client</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Screens</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_file">Create file</string>
    <string name="configuration">Configuration:</string>
    <string name="file_name">File name…</string>
    <string name="screens_configuration">Screens configuration</string>
    <string name="empty">Empty!\nYou can add new\nscreen in settings</string>
    <string name="screen_name">Screen name…</string>
    <string name="add_item">Add item</string>
    <string name="add_screen">Add screen</string>

    <string-array name="size">
        <item>wrap_content</item>
        <item>match_parent</item>
        <item>fixed</item>
    </string-array>

    <string-array name="unit">
        <item>Text field</item>
        <item>Input text field</item>
        <item>Switch</item>
    </string-array>
</resources>